# transcript-insights-flow

./: CLAUDE.md  README.md  crewai_flow.html  pyproject.toml  report.md  star_wars_dialogue.md  star_wars_story.md  story_teller_crew_log.json  story_teller_crew_log.txt  transcript_analyst_crew_log.json  transcript_analyst_crew_log.txt
knowledge/: transcript_1.txt
src/transcript_insights_flow/: main.py
src/transcript_insights_flow/crews/story_teller_crew/: story_teller_crew.py
src/transcript_insights_flow/crews/story_teller_crew/config/: agents.yaml  tasks.yaml
src/transcript_insights_flow/crews/transcript_analyst_crew/: models.py  transcript_analyst_crew.py
src/transcript_insights_flow/crews/transcript_analyst_crew/config/: agents.yaml  tasks.yaml
src/transcript_insights_flow/crews/web_search_crew/: web_search_crew.py
src/transcript_insights_flow/crews/web_search_crew/config/: tasks.yaml
src/transcript_insights_flow/models/: __init__.py  transcript_insights_flow_state.py
src/transcript_insights_flow/tools/: __init__.py  pdf_rag_tool.py  qdrant_rag_search_tool.py  web_search_tool.py
