[project]
name = "transcript_insights_flow"
version = "0.1.0"
description = "transcript-insights-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0",
]

[project.scripts]
kickoff = "transcript_insights_flow.main:kickoff"
run_crew = "transcript_insights_flow.main:kickoff"
plot = "transcript_insights_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
